# 3rscan-triplet-dataset-toolkit

./: .gitignore  CITATION.cff  LICENSE  README.md  requirements.txt
data/: abstract_dataset.py  data_util.py  invariance_database.py  invariance_dataset.py  triplet_database.py  triplet_dataset.py
eval/: encoding_database.py  evaluator.py  feature_distance.py  top_k_accuracy.py  visualizer.py
models/: bounding_box_encoder.py  full_image_encoder.py  receptive_field_encoder.py  reobj_encoder.py
models/backbone/: resnet.py  vgg16.py
models/layers/: reobj_conv_block.py  rmac_layer.py
models/losses/: TripletLoss.py  metrics.py
notebooks/: Plot_Visibilities.ipynb  test.ipynb
splits/: test.txt  train.txt  val.txt
util/: point_cloud_projection_and_rendering.py  solver.py
util/FrameFilter/: CMakeLists.txt  README.MD  filter_labels.txt  main.cc
